docs-added content in index file
added content in index.html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    Hi ! I am Habeeb
+    <h1> Hi ! I am Habeeb</h1>
+    <h3>This Website Showcases my Projects which i made
+        while learning New Technologies.
+    </h3>
 </body>
 
 </html>
