update my idea fields
added the Fields that i have idea about

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h1> Hi ! I am Habeeb</h1>
     <h3>This Website Showcases my Projects which i made
         while learning New Technologies.
+
+        I am Interested in Learning Full Stack Web Development.
+        I have Some Idea of Html , csss
     </h3>
 </body>
 
